<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OverlayTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="service_name">System Overlay</string><string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="clap_to_click">Enable Clap to Click</string>
    <string name="accelerometer_to_click">Enable Accelerometer to Click</string>
    <string name="color_to_click">Enable Color to Click</string>

</resources>