<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/stopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/startService"
        android:layout_marginLeft="18dp"
        android:enabled="false"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stopService"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/start_service" />

    <CheckBox
        android:id="@+id/clap_to_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stopService"
        android:layout_below="@+id/stopService"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:enabled="false"
        android:text="@string/clap_to_click" />

    <CheckBox
        android:id="@+id/accelerometer_to_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clap_to_click"
        android:layout_below="@+id/clap_to_click"
        android:checked="false"
        android:enabled="false"
        android:text="@string/accelerometer_to_click" />

    <CheckBox
        android:id="@+id/color_to_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accelerometer_to_click"
        android:layout_below="@+id/accelerometer_to_click"
        android:enabled="false"
        android:text="@string/color_to_click" />

    <Button
        android:id="@+id/test_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/color_to_click"
        android:layout_below="@+id/color_to_click"
        android:text="test1" />

    <Button
        android:id="@+id/test_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/startService"
        android:layout_below="@+id/color_to_click"
        android:text="test2" />

    <Button
        android:id="@+id/test_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test_button1"
        android:layout_alignBottom="@+id/test_button1"
        android:layout_toRightOf="@+id/startService"
        android:text="test3" />

    <Button
        android:id="@+id/test_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/test_button1"
        android:layout_below="@+id/test_button1"
        android:text="test4" />

    <Button
        android:id="@+id/test_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_button2"
        android:layout_toRightOf="@+id/test_button1"
        android:text="test5" />

    <Button
        android:id="@+id/test_button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test_button4"
        android:layout_alignBottom="@+id/test_button4"
        android:layout_alignLeft="@+id/test_button3"
        android:text="test6" />

    <Button
        android:id="@+id/test_button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/test_button1"
        android:layout_below="@+id/test_button1"
        android:layout_marginTop="52dp"
        android:text="test7" />

    <Button
        android:id="@+id/test_button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test_button7"
        android:layout_alignBottom="@+id/test_button7"
        android:layout_alignLeft="@+id/test_button5"
        android:text="test8" />

    <Button
        android:id="@+id/test_button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test_button8"
        android:layout_alignBottom="@+id/test_button8"
        android:layout_toRightOf="@+id/test_button8"
        android:text="test9" />

</RelativeLayout>